# audiorouter

./: .gitignore  LICENSE  README.md  audiorouter.flatpak  de.pasuki.audiorouter.autostart.desktop  pyproject.toml
.github/workflows/: flatpak-release.yml  flatpak.yml
audiorouter/: app.py  autostart.py  companion.py  config.py  core.py  daemon.py  gui.py  pactl.py  portal_background.py  system_policy.py  trace.py
audiorouter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
data/: de.pasuki.audiorouter.desktop  de.pasuki.audiorouter.metainfo.xml
data/systemd/: vsinkctl.service
docs/: flathub.md
flatpak/: de.pasuki.audiorouter.flathub.yml  de.pasuki.audiorouter.yml
repo/: summary  summary.idx
repo/refs/heads/app/de.pasuki.audiorouter/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
scripts/: prepare_flathub_release.sh
third_party_wheels/: dbus_next-0.2.3-py3-none-any.whl  pulsectl-23.5.2-py2.py3-none-any.whl
