[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "audiorouter"
version = "0.1.0"
description = "Modern Linux audio routing application for PipeWire"
authors = [{ name = "Pasuki" }]
license = "MIT"
requires-python = ">=3.10"

[project.scripts]
audiorouter = "audiorouter.app:main"

[tool.setuptools]
packages = ["audiorouter"]
